option java_package = "com.chuangyou.common.protobuf.pb.inverseBead";
option java_outer_classname = "InverseBeadMsgProto";

//五行模板
message InverseBeadMsg {
	required int32 fiveElements = 1; // 五行 1金、2 木、3水、4火、5土
	required int32 marking = 2;      // 升级的印记 1到10
	required int32 stage = 3;        // 升级到的阶段
	required int32 val = 4;			 // 当前的进度值 
}